# NetPeek

./: .gitignore  README.md  io.github.zingytomato.netpeek.json  meson.build
data/: io.github.zingytomato.netpeek.desktop.in  io.github.zingytomato.netpeek.gschema.xml  io.github.zingytomato.netpeek.metainfo.xml.in  io.github.zingytomato.netpeek.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  es.po  fr.po  it.po  meson.build  netpeek.pot  nl.po  pl.po  ru.po  sk.po  uk.po
src/: app.py  meson.build  netpeek.gresource.xml  netpeek.in  netpeek.py  pages.py  scanner.py  widgets.py  window.py
src/gtk/: device_card.ui  home_page.ui  main_window.ui  results_page.ui
